* Mon Feb 01 2010 mbhangui@gmail.com
Release 1.6.9 Start 01/02/2010


* Mon Feb 01 2010 mbhangui@gmail.com
Release 1.6.8 Start 04/01/2010
06/01/2010
1.  host.cntrl, host.mysql, host.master can now accept
    host:username:password:port/socket
2.  MYSQL_PASS changed to MYSQL_PASSWD in svctool
3.  Fixed install_tables attempting to create clustered tables setup
    on non-clustered setup.
01/01/2010
4.  Remove --mysqlhost parameter for indisrvr service creation in
    indimail.spec
5.  use mysql user, password from command line in pwdlookup service
19/01/2010
6.  Fixed logic in mail_acl() function. accesslist feature in qmail-smtpd
20/01/2010
7.  New program uacl to test accesslist
01/02/2010
8.  Fixed xtext function in qmail-remote

* Mon Jan 04 2010 mbhangui@gmail.com
Release 1.6.7 Start 11/12/2009
16/12/2009
1.  create log directory in create_services
2.  replaced all occurences of chown with $chown in svctool
17/12/2009
3.  log from and rcpt for qmail-remote
4.  Modified rsmtp, rsmtprdomains, rsmtpsdomains, rsmptsenders to correctly
    decipher host from smtp log
18/12/2009
5.  Added case for mysql-5.5 in svctool
19/12/2009
6.  Use GNU syntax for tail in bogofilter-qfe.in
21/12/2009
7.  fixed issue with delivery of mails to register-spam, spam,
    register-nonspam, nonspam ids
30/12/2009
8.  Added vfilter rule for X-Bogosity spam filtering in postfilt in svctool
9.  Made vcfilter setuid
10. Modified vcfilter.c, vbulletin.c, vadduser.c, printdir.c, vdeluser.c,
    vreorg.c, vdominfo.c, vdeldomain.c for running programs with uid,gid of
    domain

* Fri Dec 11 2009 mbhangui@gmail.com
Release 1.6.6 Start 25/11/2009
25/11/2009
1.  Added repo for openSUSE 11.2, Fedora 12
2.  Prevent empty alias_line, email addresses getting added in valias
3.  Removed left over system command from qmailmrtg7
27/11/2009
4.  Fixed config in qmail. renamed config shell script to qmailconfig
5.  Added reports for smtp port 587 in svctool --reports